--- a/lib/yard/templates/default/fulldoc/html/full_list_stepdefinitions.erb
+++ b/lib/yard/templates/default/fulldoc/html/full_list_stepdefinitions.erb
@@ -1,11 +1,11 @@
 <% n = 1 %>
-<% @step_definitions.each do |stepdef| %>
+<% @items.each do |stepdef| %>
   <li class="r<%= n %>">
 	<span class='object_link'>
 		<span class="pre"><%= stepdef.keyword %></span>
 		<a href="steptransformers.html#<%= stepdef.name %>"><span class="name"><%= h(stepdef.value) %></span></a>&nbsp;&nbsp;
 	</span>
-	<span class="">(<%= h("#{stepdef.files.first.first}:#{stepdef.files.first.last}") %>)<span>
+	<span class="">(<%= h(stepdef.location) %>)<span>
   </li>
   <% n = n == 2 ? 1 : 2 %>
 <% end %>
