--- a/lib/yard/templates/default/fulldoc/html/full_list_tagusages.erb
+++ b/lib/yard/templates/default/fulldoc/html/full_list_tagusages.erb
@@ -1,8 +1,8 @@
 <% n = 1 %>
-<% @tagusage.each do |usage| %>
+<% @items.each do |usage| %>
   <li class="r<%= n %>">
 	<span class='object_link'>
-		<a href="<%= usage.filename %>"><%= h(usage.value) %></a>
+		<a href="<%= "#{usage.name}.html" %>"><%= h(usage.value) %></a>
 	</span>
 	<small><%= usage.total_scenario_count %></small>
   </li>
