--- a/lib/yard/templates/default/fulldoc/html/full_list_scenarios.erb
+++ b/lib/yard/templates/default/fulldoc/html/full_list_scenarios.erb
@@ -1,8 +1,8 @@
 <% n = 1 %>
-<% @scenarios.each do |scenario| %>
+<% @items.each do |scenario| %>
   <li class="r<%= n %>">
 	<span class='object_link'>
-		<a href="<%= scenario.feature.filename %>"><%= h(scenario.value) %></a>
+		<a href="<%= "#{scenario.feature.name}.html" %>"><%= h(scenario.value) %></a>
 	</span>
 	<span class="">(<%= h(scenario.location) %>)<span>
   </li>
