* Tagusage has been retired * Tags are found during parsing by name or created and all uses are appended to the exising or newly created object * Tagusage template renamed and fixed up for just a tag and all the references * Tags are named tag_TAG (removed the @ as it was encoded during file serialization and I couldn't find an encoder helper) * Cleaned up all references in the fulldoc, full list to references tags

--- a/lib/yard/templates/default/feature/html/feature.erb
+++ b/lib/yard/templates/default/feature/html/feature.erb
@@ -8,7 +8,7 @@
 		<div class="file"><%= h(@feature.file) %></div>
 		<div class="tags">
 			<% @feature.tags.each do |tag| %>
-			<a href="tag_<%= tag.value %>.html"><%= tag.value %></a>
+			<a href="tag_<%= tag.name %>.html"><%= tag.value %></a>
 			<% end %>
 		</div>		
 	</div>
@@ -139,7 +139,7 @@
 			<% unless scenario.tags.empty? %>
 			<div class="tags">
 				<% scenario.tags.each do |tag| %>
-				<a href="tag_<%= tag.value %>.html"><%= tag.value %></a>
+				<a href="tag_<%= tag.name %>.html"><%= tag.value %></a>
 				<% end %>
 			</div>
 			<% end%>
