* Tagusage has been retired * Tags are found during parsing by name or created and all uses are appended to the exising or newly created object * Tagusage template renamed and fixed up for just a tag and all the references * Tags are named tag_TAG (removed the @ as it was encoded during file serialization and I couldn't find an encoder helper) * Cleaned up all references in the fulldoc, full list to references tags
* Moved Cucumber CodeObjects, Handlers, and Parsers to a Cucumber sub-directory
* Moved StepDefinition and StepTransforms form extensions.rb to individual StepObject and Handlers files

* (lsegal advice) Created Cucumber Namespace and sub namespaces for features, tags, and step transformers.
* (lsegal advice) Started to break apart the feature.erb into smaller digestable erb sections

--- a/lib/yard/templates/default/feature/html/feature.erb
+++ b/lib/yard/templates/default/feature/html/feature.erb
@@ -8,7 +8,7 @@
 		<div class="file"><%= h(@feature.file) %></div>
 		<div class="tags">
 			<% @feature.tags.each do |tag| %>
-			<a href="tag_<%= tag.name %>.html"><%= tag.value %></a>
+			<a href="<%= url_for tag %>"><%= tag.value %></a>
 			<% end %>
 		</div>		
 	</div>
@@ -17,229 +17,6 @@
 		<%= @feature.description %>
 	</div>
 
-	<% if @feature.background %>
-
-	<script type="text/javascript" charset="utf-8">
-	$(function() {
-		$('#background .toggle').click(function() {
-			$("#backgroundSteps").toggle('blind');
-
-			var stateIndicator = $('#background a.toggle')[0]
-
-			stateIndicator.innerHTML = (stateIndicator.innerHTML === '+' ? '-' : '+'); 
-			return false;
-		});
-	});
-	</script>
-
-	<div id="background">
-		<div class="title">
-			<a class="toggle">-</a>
-			<span class="pre">Background</span>
-		</div>
-		<% unless @feature.background.description.empty? %>
-		<div class="description">
-			<%= h(@feature.background.description) %>
-		</div>
-		<% end %>
-
-		<!-- Background and scenario should have the same display with some minor changes -->
-
-		<div id="backgroundSteps" class="steps">
-			<% if @feature.background.steps %>
-			<%  @feature.background.steps.each_with_index do |step,index| %>
-			<div <%= "id='backgroundStep#{index}'" %> class="step <%= (index + 1) % 2 == 0 ? 'even' : 'odd' %>">
-				<span class="predicate"><%= step.keyword %></span>
-
-				<% if step.definition %>
-				<script type="text/javascript" charset="utf-8">
-				$('<%= "#backgroundStep#{index}" %>').hover(
-					function () { $('<%= "#backgroundStep#{index} div.details" %>').toggle('slide'); },
-					function () { $('<%= "#backgroundStep#{index} div.details" %>').toggle('slide'); }
-				);
-
-				$('<%= "#backgroundStep#{index} div.details" %>').show();
-
-				</script>
-				<span class="defined">
-					<a href="steptransformers.html#<%= step.definition.name %>"><%= h(step.value) %></a>
-					<div class="details" style="display: none;">
-						(<%= h( step.definition.location ) %>)
-					</div>
-				</span>
-				<% else %>
-				<span class="undefined"><%= h(step.value) %></span>
-				<% end %>
-
-			</div>
-
-			<% if step.has_table? %>
-			<div class="multiline">
-				<table style="">
-
-					<thead>
-						<tr>
-							<% step.table.first.each_with_index do |column,column_index| %>
-							<th class="<%= (column_index + 1) % 2 == 0 ? 'even' : 'odd' %>"><%= h(column.strip) %></th>
-							<% end %>
-						</tr>
-					</thead>
-
-					<% step.table[1..-1].each_with_index do |row,row_index| %>
-					<tr class="<%= (row_index + 1) % 2 == 0 ? 'even' : 'odd' %>">
-						<% row.each_with_index do |column,column_index| %>
-						<td><%= h(column.strip) %></td>
-						<% end %>
-					</tr>
-					<% end %>
-				</table>
-			</div>
-			<% end %>
-			
-			<% if step.has_text? %>
-			<div class="text">
-				<%= h(step.text) %>
-			</div>
-			<% end %>
-
-
-			<% end %>
-			<% else %>
-			<span>No Steps Defined</span>
-			<% end %>
-		</div>
-
-	</div>
-	<% end %> 
-
-	<% if @feature.scenarios %>
-	<% @feature.scenarios.each_with_index do |scenario,scenario_index| %>
-
-	<script type="text/javascript" charset="utf-8">
-	$(function() {
-		$('#scenario<%=scenario_index%> .toggle').click(function() {
-			$("#scenario<%=scenario_index%>Steps").toggle('blind');
-
-			var stateIndicator = $('#scenario<%=scenario_index%> a.toggle')[0]
-
-			stateIndicator.innerHTML = (stateIndicator.innerHTML === '+' ? '-' : '+'); 
-			return false;
-		});
-	});
-	</script>
-
-	<div <%= "id='scenario#{scenario_index}'" %>  class="scenario">
-		<div class="title">
-			<a class="toggle">-</a>
-			<span class="pre">Scenario<%= !scenario.examples.empty? ? " Outline" : "" %>:</span>
-			<span class="name"><%= h(scenario.value) %></span>
-		</div>
-		<div class="meta">
-			<div class="file">Line: <%= scenario.files.first.last %></div>
-			<% unless scenario.tags.empty? %>
-			<div class="tags">
-				<% scenario.tags.each do |tag| %>
-				<a href="tag_<%= tag.name %>.html"><%= tag.value %></a>
-				<% end %>
-			</div>
-			<% end%>
-		</div>
-		<% unless scenario.description.empty? %>
-		<div class="description">
-			<%= h(scenario.description) %>
-		</div>
-		<% end %>
-
-		<div <%= "id='scenario#{scenario_index}Steps'" %> class="steps">
-			<% if scenario.steps %>
-			<% scenario.steps.each_with_index do |step,index| %>
-			<div <%= "id='scenario#{scenario_index}Step#{index}'" %> class="step <%= (index + 1) % 2 == 0 ? 'even' : 'odd' %>">
-				<span class="predicate"><%= step.keyword %></span>
-
-				<% if step.definition %>
-				<script type="text/javascript" charset="utf-8">
-				$('<%= "#scenario#{scenario_index}Step#{index}" %>').hover(
-					function () { $('<%= "#scenario#{scenario_index}Step#{index} div.details" %>').toggle('slide'); },
-					function () { $('<%= "#scenario#{scenario_index}Step#{index} div.details" %>').toggle('slide'); }
-				);
-
-				$('<%= "#scenario#{scenario_index}Step#{index} div.details" %>').show();
-
-				</script>
-				<span class="defined">
-					<a href="steptransformers.html#<%= step.definition.name %>"><%= h(step.value) %></a>
-					<div class="details" style="display: none;">
-						(<%= h("#{step.definition.files.first.first}:#{step.definition.files.first.last}") %>)
-					</div>
-				</span>
-				<% else %>
-				<span class="undefined"><%= h(step.value) %></span>
-				<% end %>
-
-			</div>
-
-			<% if step.has_table? %>
-			<div class="multiline">
-				<table style="">
-
-					<thead>
-						<tr>
-							<% step.table.first.each_with_index do |column,column_index| %>
-							<th class="<%= (column_index + 1) % 2 == 0 ? 'even' : 'odd' %>"><%= h(column.strip) %></th>
-							<% end %>
-						</tr>
-					</thead>
-
-					<% step.table[1..-1].each_with_index do |row,row_index| %>
-					<tr class="<%= (row_index + 1) % 2 == 0 ? 'even' : 'odd' %>">
-						<% row.each_with_index do |column,column_index| %>
-						<td><%= h(column.strip) %></td>
-						<% end %>
-					</tr>
-					<% end %>
-				</table>
-			</div>
-			<% end %>
-			
-			<% if step.has_text? %>
-			<div class="text">
-				<%= h(step.text) %>
-			</div>
-			<% end %>
-			
-
-
-			<% end %>
-			<% else %>
-			<span>No Steps Defined</span>
-			<% end %>
-		</div>
-
-		<% if scenario.outline? %>
-		<div class="outline">
-			<div class="keyword"> <%= h(scenario.example_keyword) %> </div>
-			<table>
-				<thead>
-					<tr>
-						<% scenario.example_headers.each_with_index do |header,header_index| %>
-						<th><%= h(header) %></th>
-						<% end %>
-					</tr>
-				</thead>
-				<% scenario.example_data.each_with_index do |row,row_index| %>
-				<tr class="<%= (row_index + 1) % 2 == 0 ? 'even' : 'odd' %>" >
-					<% row.each_with_index do |column,column_index| %>
-						<td><%= h(column.to_s.strip) %></td>
-					<% end %>
-				</tr>
-				<% end %>
-			</table>
-		</div>
-		<% end %>
-
-	</div>
-	<% end %>
-	<% end %>
-
+	<%= yieldall %>
 </div>
 
