--- a/lib/yard/templates/default/fulldoc/html/full_list_features.erb
+++ b/lib/yard/templates/default/fulldoc/html/full_list_features.erb
@@ -1,10 +1,7 @@
 <% n = 1 %>
 <% @items.each do |feature| %>
   <li class="r<%= n %>">
-	<span class='object_link'>
-		<a href="<%= "#{feature.name}.html" %>"><%= h(feature.value) %></a>
-	</span>
-	<span class="">(<%= h(feature.file) %>)<span>
+	<%= linkify feature, feature.value %>
   </li>
   <% n = n == 2 ? 1 : 2 %>
 <% end %>
