--- a/lib/yard/templates/default/fulldoc/html/full_list_tags.erb
+++ b/lib/yard/templates/default/fulldoc/html/full_list_tags.erb
@@ -1,10 +1,8 @@
 <% n = 1 %>
-<% @items.each do |usage| %>
+<% @items.each do |tag| %>
   <li class="r<%= n %>">
-	<span class='object_link'>
-		<a href="<%= "#{usage.name}.html" %>"><%= h(usage.value) %></a>
-	</span>
-	<small><%= usage.total_scenario_count %></small>
+	<%= linkify tag, tag.value %>
+	<small><%= tag.all_scenarios.size %></small>
   </li>
   <% n = n == 2 ? 1 : 2 %>
 <% end %>
