+ Feature steps, when linked to step definitions are no entirely linked; instead a '?' sits at the end of the line. + Feature steps, with matches within the step will show the highlighted matches (Excluding the entire match) + Removed step rollover to show step definition location

--- a/lib/templates/default/feature/html/steps.erb
+++ b/lib/templates/default/feature/html/steps.erb
@@ -16,9 +16,9 @@
 
 		</script>
 		<span class="defined">
-			<a href="<%= url_for step.definition %>"><%= h(step.value) %></a>
-			<div class="details" style="display: none;">
-				(<%= h step.definition.location %>)
+			<%= highlight_matches(step) %>
+			<div class="details">
+				<a href="<%= url_for step.definition %>">?</a>
 			</div>
 		</span>
 		<% else %>
