Scenario Outline fixes in tags and displaying in Scenario Search
- Fix ScenarioOutline is a new class, tags used to count and consider
  only Scenarios.  They are much more accepting now.
- Fix ScenarioOutline Scenario instances were just showing numbers and
  not their scenario names.  I fixed that issue by fixing all the
  member variables to be @step_container.variable.

--- a/lib/templates/default/tag/html/feature.erb
+++ b/lib/templates/default/tag/html/feature.erb
@@ -1,7 +1,7 @@
 <% object.features.each do |feature| %>
 <div class="feature direct">
 	<div class="title">
-		<span class="pre">Feature:</span>
+		<span class="pre"><%= feature.keyword %></span>
 		<span class="name">
 			<a href="<%= url_for feature %>"><%= feature.value %></a>
 		</span>
@@ -11,7 +11,7 @@
 	<% feature.scenarios.each do |scenario| %>
 	<div class="scenario indirect">
 		<div class="title">
-			<span class="pre">Scenario:</span>
+			<span class="pre"><%= scenario.keyword %></span>
 			<span class="name">
 				<a href="<%= url_for feature %>"><%= scenario.value %></a>
 			</span>
