Tag Search and Template Fixes
- FIX Tag template had some CSS nonsense that was hidden in the git
  stash that haunted the last checkin.  Removed the extra grays
  and added the missing div that was causing the features/scenarios
  to trail to the right.
- FIX Tag search linked to scenarios instead of the feature of the
  scenario as the usual agreement in these parts.
+ Added the Tags on all the feautres and scenarios and placed the
  word Tags in front of them.

--- a/lib/templates/default/fulldoc/html/full_list_tags.erb
+++ b/lib/templates/default/fulldoc/html/full_list_tags.erb
@@ -14,7 +14,7 @@
 	<% end %>
 	<% tag.scenarios.each do |scenario| %>
 	<li>
-		<%= linkify scenario, scenario.value %>
+		<%= linkify scenario.feature, scenario.value %>
 		<small><%= scenario.location %></small>
 	</li>
 	<% end %>
