Feature Scenarios show their full location
Looking at the usuability of the documentation I realized that
the more often I use the entire path of the feature file with the
line number the better and particularly in this case as it is a
place where you would want to copy and paste to execute the scenario

--- a/lib/templates/default/feature/html/scenario.erb
+++ b/lib/templates/default/feature/html/scenario.erb
@@ -18,7 +18,7 @@ $(function() {
 		<span class="name"><%= h @scenario.value %></span>
 	</div>
 	<div class="meta">
-		<div class="file">Line: <%= @scenario.line_number %></div>
+		<div class="file"><%= @scenario.location %></div>
 		<% unless @scenario.tags.empty? %>
 		<div class="tags">
 			<% @scenario.tags.each do |tag| %>
