All Features link in Features Search
+ Added a 'All Features' link which takes you to the requirements
  page generated.
+ Added links to Cucumber, Gherkin, YARD, and Cukes-In-The-Yard.

--- a/lib/templates/default/fulldoc/html/full_list_features.erb
+++ b/lib/templates/default/fulldoc/html/full_list_features.erb
@@ -1,3 +1,6 @@
+<li>
+  <%= linkify YARD::CodeObjects::Cucumber::CUCUMBER_NAMESPACE, "All Features" %>
+</li>
 <% @items.each do |feature| %>
 <li>
 	<%= "<a class='toggle'></a>" unless feature.scenarios.empty? %>
