--- a/lib/templates/default/namespace/html/namespace.erb
+++ b/lib/templates/default/namespace/html/namespace.erb
@@ -1,5 +1,12 @@
 <% if @namespace %>
   <div id="cukes_logo">&nbsp;</div>
+  <div id="cukes_links">
+    <a href="http://cukes.info/">Cucumber</a> |
+    <a href="http://github.com/aslakhellesoy/cucumber/wiki/Gherkin">Gherkin</a> |
+    <a href="http://yardoc.org/">YARD</a> |
+    <a href="http://github.com/burtlo/Cucumber-In-The-Yard">Cucumber-In-The-YARD</a>
+  </div>
+
   <div class="requirements">
 
     <div class="summary">
